nullaway_error_25B41BE2-1700-4158-BBFC-496FF3DC9FE4.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/web/context/request/async/WebAsyncManager.java:494: error: [NullAway] dereferenced expression asyncWebRequest is @Nullable
                HttpServletRequest request = asyncWebRequest.getNativeRequest(HttpServletRequest.class);
                                                            ^
    (see http://t.uber.com/nullaway )
